--- a/src/app.pcss
+++ b/src/app.pcss
@@ -17,3 +17,36 @@ body {
   display: flex;
   justify-content: center;
 }
+
+/* Spinner */
+
+.spinner {
+  width: 24px;
+  height: 24px;
+  border: 3.5px solid #1d1919;
+  margin-top: -5px;
+  margin-bottom: -5px;
+  margin-right: 1px;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@media only screen and (prefers-color-scheme: dark) {
+  .spinner {
+    border: 3.5px solid white;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
